# token-maker

./: CHANGELOG  COPYRIGHT  Cargo.toml  MANUAL.org  README.org  ROADMAP.org  justfile
.github/assets/: control  dot.desktop  install.sh  remove.sh
.github/workflows/: release.yml
src/: cache.rs  data.rs  file_browser.rs  frame.rs  frame_maker.rs  image.rs  main.rs  math.rs  modifier.rs  naming_convention.rs  persistence.rs  status_bar.rs  style.rs  token_maker.rs  trackpad.rs  widgets.rs  workspace.rs
src/image/: convert.rs  operations.rs
src/modifier/: background.rs  flood_mask.rs  frame.rs  greenscreen.rs
src/widgets/: color_picker.rs  file_browser.rs  pixel_sampler.rs  text_box.rs  trackpad.rs
