[package]
name = "token-maker"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.image]
version = "0.24.*"
features = ["webp-encoder"]

[dependencies.iced]
version = "0.8"
features = ["image", "tokio"]

[dependencies.iced_native]
version = "0.9"

[dependencies.tokio]
version = "1.25"
features = ["rt"]
