[package]
name = "token-maker"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
dirs = "4"

[dependencies.image]
version = "0.24.*"
features = ["webp-encoder"]

[dependencies.iced]
version = "0.8"
features = ["image", "tokio"]

[dependencies.iced_native]
version = "0.9"

[dependencies.tokio]
version = "1.25"
features = ["rt"]

[dependencies.reqwest]
version = "0.11.14"

[dependencies.serde]
version = "1"
features = ["derive"]
